My first change

--- a/HTML-Jscript/Lesson1/index.html
+++ b/HTML-Jscript/Lesson1/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello World</title>
+     <h2>It's me again!</h2>
 </head>
 <body>
     <h1>Hello, World!</h1>
