--- a/HTML-Jscript/Lesson1/index.html
+++ b/HTML-Jscript/Lesson1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>  
+    <title>Hello World its a new branch</title>  
 </head>
 <body>
     <h1>Hello, World!</h1>
